Fixed torrent title alignment.

--- a/web/style.css
+++ b/web/style.css
@@ -67,6 +67,7 @@ abbr.limited {
 	max-width : 600px;
 	overflow : hidden;
 	text-overflow : ellipsis;
+	vertical-align : middle;
 }
 
 .info {
